# LangChainApp

./: .env.example  FRONTEND_INTEGRATION.md  Mermaid.md  README.md  agent_workflow.txt  pyproject.toml  start.py
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/infras/agent/: __init__.py  agent_runner.py  rule.py  travel_agent.py  visualize_graph.py
app/infras/db/: __init__.py  db.py
app/infras/evaluate/: evaluate_agent.py  evaluate_rag.py
app/infras/func/: __init__.py  agent_func.py
app/infras/rag/: AgenticRag.py  GraphRag.py  evaluate.py  rag.py
app/infras/third_api/: __init__.py  tavily.py  weather.py
app/router/: __init__.py  agent_router.py  root.py
chroma_db/: chroma.sqlite3
json/: delta.JSON  langgraph.JSON  tool_call.JSON  tool_result.JSON
tests/: run_demo.py  run_interactive.py  test_agent_func.py  test_flight.py  test_tavily.py  test_weather.py  test_weather_integration.py
